# AutoBike

./: ANN4.m  All_Controllers.slx.r2018a  All_ControllersScript.m  Balance_with_ANN.m  BestNet.mat  Dont_open_Fuzzy_Final_new.fis  Lab5.m  PoleCart.m  PosPlot.m  QNeur.m  README.md  ReadLogScript.m  RunANN.m  SimulatePendel.m  TrainANN.m
AutoBike/: AutoBike Project.lvproj
AutoBike/Controllers graphics/: Knob control.ctl  Yaw control.ctl
AutoBike/FPGA/: FPGA Main.vi
AutoBike/RealTime/: Main.vi
AutoBike/Shared resoruces/: Front Panel Control Variables.vi  Navigation Variables.vi  ODrive State and Info.vi  Shared resources RT.lvlib  gear.vi
AutoBike/Typedef/: FPGA_ref.ctl  Filter Data.ctl  INS Data.ctl  LogInput.ctl  ODrive Receive Cluster.ctl  ODrive Send Cluster.ctl  Remote Control Cluster.ctl  UWB Cluster.ctl
AutoBike/Validate/: FPGASteeringValidateWithTime.vi  RollValidate.vi  SpeedAndBrakeValidate.vi  SteeringValidate - second.vi  SteeringValidate.vi
Autobike_Summer2023-main/: README.md
Autobike_Summer2023-main/docs/: manual.md
Autobike_Summer2023-main/myrio/c/: CMakeLists.txt  upload-to-myrio.cmd
Autobike_Summer2023-main/myrio/c/src/: balancing_controller.c  generateAbortTrajectory.c  generateAbortTrajectory.h  kalman_filter.c  pid_speed_controller.c  reset_traj.c  test.c  trajectory_selector.c  trajectory_selector.h  vesc_communication.c
Autobike_Summer2023-main/myrio/c/src/include/ChibiOS/: README.md
Autobike_Summer2023-main/myrio/c/submodules/bldc_uart_comm_stm32f4_discovery/: Makefile  chconf.h  halconf.h  mcuconf.h
Autobike_Summer2023-main/rut955/: Makefile  upload-to-rut955.cmd
Controllers/C/: PID.c  PID.h  buildPID.sh  main.c
Documents/Datasheets/: README.md
Documents/Manuals/: README.md
Documents/WPDLogs/: README.md
Documents/test logs/: 2023-12-05  testprotokoll_balansering.txt  Testprotokoll balansering 2023-12-09.txt  Testprotokoll balansering 2023-12-10.txt  Testprotokoll_balansering_2023-12-08.txt
LabVIEW/: README
LabVIEW/Autobike/: Autobike.aliases  Autobike.lvlps  Autobike.lvproj  Calibration.vi  Main.vi  (+2 more)
LabVIEW/Autobike Module Testing/: Autobike Module Testing.aliases  Autobike Module Testing.lvproj  Drive testing.vi  Steering test.vi
LabView Navigation/: AutoBikeNavigation.lvlib  CoordToMeters.vi  Kalman.vi  Orientation Measurements.vi  PathFollowingFinal.vi  PlanPath.vi  TurnLogic.vi  XY2Heading.vi
OLD_PRE_HT2023/: All_Controllers.slx  All_ControllersScript.m  PosPlot.m  README.md  RTPt.mat
Simulation/: Issues.txt
autobike/: CMakeLists.txt  package.xml
config/: configuration.xml  loose_parameters
(+5989 files in other folders)
